--- a/package.json
+++ b/package.json
@@ -12,13 +12,25 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@tiptap/extension-image": "^2.24.2",
+    "@tiptap/extension-table": "^2.24.2",
+    "@tiptap/extension-table-cell": "^2.24.2",
+    "@tiptap/extension-table-header": "^2.24.2",
+    "@tiptap/extension-table-row": "^2.24.2",
+    "@tiptap/extension-task-item": "^2.24.2",
+    "@tiptap/extension-task-list": "^2.24.2",
+    "@tiptap/pm": "^2.24.2",
+    "@tiptap/react": "^2.24.2",
+    "@tiptap/starter-kit": "^2.24.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tiptap-extension-resize-image": "^1.2.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
